@@ -6,7 +6,7 @@
 
     <groupId>com.gen.maze</groupId>
     <artifactId>maze-gen</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3</version>
     <name>maze-gen</name>
 
     <properties>
@@ -40,6 +40,7 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
 
